# DD_ILP

./: .gitmodules  .travis.yml  CMakeLists.txt  DD_ILP.hxx  Doxyfile.in  README.md
cmake/modules/: FindGUROBI.cmake
include/: external_solver_interface.hxx  gurobi_interface.hxx  problem_export.hxx  sat_solver.hxx
test/: CMakeLists.txt  binary_triangle_gm.hxx  binary_triangle_gm_gurobi.cpp  binary_triangle_gm_problem_export.cpp  binary_triangle_gm_sat.cpp  test.h
